# cgen

./: .gitignore  Dockerfile  README.md  output.txt  output_1034am.txt  pyproject.toml  runs_2xl4.csv  runs_4xl4.csv  setup.py
benchmark/: benchmark_cgen.py  benchmark_vllm.py  benchmark_vllm_async.py  compare_seesaw_vllm.sh  dataload.py  download_sharegpt.sh  run_benchmark.sh  run_quality_comparison.sh  run_vllm_async.sh  run_vllm_baseline.sh
benchmark/configs/: llama2-7b-2xl4.json  llama3-15b-2xl4.json  llama3-15b-4xl4.json  llama3-8b-2xl4.json
benchmark/outputs/: completed_runs_2xl4.csv  completed_runs_4xl4.csv  implement_seesaw - bench - l4 - arxiv - 15b - seesaw vs vllm - Sheet1 (3).csv  output_quality_comparison.txt
cgen/: config.py  dist_utils.py  engine.py  prefetch.py  schedule.py  utils.py
cgen/layers/: __init__.py  attn.py  base.py  cache.py  emb.py  linear.py
cgen/models/: __init__.py  base.py  llama.py
csrc/: page.cpp  page_kernel.cu
scripts/: format.sh  launch_docker.sh
